--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,9 @@ plugins:
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
-# exclude:
-#   - Gemfile
+exclude:
+  - dev
+  #   - Gemfile
 #   - Gemfile.lock
 #   - node_modules
 #   - vendor/bundle/
