edited email address

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Cloud Development in .NET
-email: robin.axelsson2@learnet.se
+email: axelsson.robin@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
   This blog is for posting excercises in my voccational studies at Teknikhögskolan.
 baseurl: "" # the subpath of your site, e.g. /blog
